fixed relative paths

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 					<li class="header__logotipo">
 						<a href="/">
 							<span>CompraLoca</span>
-							<img src="/img/loco.png" alt="loco_icon">
+							<img src="./../img/loco.png" alt="loco_icon">
 						</a>
 					</li>
 					<li class="header__link"><a href="./contact.html">Contacto</a></li>
@@ -128,7 +128,7 @@
 				<p>Copyright © 2021 Agustin Wet</p>
 			</div>
 			<div class="footer__map_wrapper">
-				<img class="footer__map_img" src="/img/map_image.png" alt="Map">
+				<img class="footer__map_img" src="./../img/map_image.png" alt="Map">
 			</div>
 			<div>
 				<p>Av. Rivadavia 5093, Piso 5, CP 1344, Caballito, CABA</p>
