--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 					<li class="header__link"><a href="./pages/tendencias.html">Tendencias</a></li>
 					<li class="header__link"><a href="./pages/ofertas.html">Ofertas</a></li>
 					<li class="header__logotipo">
-						<a href="/">
+						<a href="./">
 							<span>CompraLoca</span>
-							<img src="/img/loco.png" alt="loco_icon">
+							<img src="./img/loco.png" alt="loco_icon">
 						</a>
 					</li>
 					<li class="header__link"><a href="./pages/contact.html">Contacto</a></li>
@@ -192,7 +192,7 @@
 				<p>Copyright © 2021 Agustin Wet</p>
 			</div>
 			<div class="footer__map_wrapper">
-				<img class="footer__map_img" src="/img/map_image.png" alt="Map">
+				<img class="footer__map_img" src="./img/map_image.png" alt="Map">
 			</div>
 			<div>
 				<p>Av. Rivadavia 5093, Piso 5, CP 1344, Caballito, CABA</p>
