--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
 					<li class="header__link"><a href="./tendencias.html">Tendencias</a></li>
 					<li class="header__link"><a href="./ofertas.html">Ofertas</a></li>
 					<li class="header__logotipo">
-						<a href="/">
+						<a href="./../index.html">
 							<span>CompraLoca</span>
 							<img src="./../img/loco.png" alt="loco_icon">
 						</a>
