--- a/pages/about.html
+++ b/pages/about.html
@@ -5,23 +5,37 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Sobre Nosotros</title>
-		<link rel="stylesheet" href="./../css/styles.css" />
+		<link rel="stylesheet" href="./../css/sass.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
 	</head>
 	<body>
 		<!-- Header -->
 		<header class="header">
 			<nav>
 				<ul>
-					<li class="header__link"><a href="./tendencias.html">Tendencias</a></li>
-					<li class="header__link"><a href="./ofertas.html">Ofertas</a></li>
+					<li class="header__link">
+						<a href="./tendencias.html">Tendencias</a>
+					</li>
+					<li class="header__link">
+						<a href="./ofertas.html">Ofertas</a>
+					</li>
 					<li class="header__logotipo">
 						<a href="./../index.html">
 							<span>CompraLoca</span>
-							<img src="./../img/loco.png" alt="loco_icon">
+							<img src="./../img/loco.png" alt="loco_icon" />
 						</a>
 					</li>
-					<li class="header__link"><a href="./contact.html">Contacto</a></li>
-					<li class="header__link"><a href="./about.html">Nosotros</a></li>
+					<li class="header__link">
+						<a href="./contact.html">Contacto</a>
+					</li>
+					<li class="header__link">
+						<a href="./about.html">Nosotros</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
@@ -32,23 +46,157 @@
 			<!-- Contenido sobre nosotros -->
 			<article>
 				<h3>Mision</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed non amet illum, explicabo nulla suscipit veniam quos illo libero. Esse voluptatum totam atque quaerat illum ex, iste tempora earum quia corrupti? Suscipit assumenda quo aspernatur. Natus fugit beatae laborum odit.</p>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+					Iste praesentium velit magnam inventore optio! Facilis quae
+					saepe eveniet qui architecto laboriosam, minus corrupti
+					culpa repudiandae laborum accusamus impedit mollitia
+					nesciunt. Voluptatem nisi omnis obcaecati animi doloribus,
+					molestias aliquam quo fugit numquam repellat accusamus. Sint
+					at error obcaecati aliquam ea officia cumque placeat quod
+					natus asperiores? Voluptas nisi dolorum est molestias! In
+					tenetur, officiis fugit recusandae tempora, facere, omnis
+					error hic architecto voluptatem facilis cupiditate quasi
+					neque repellendus dolorem! Fuga accusamus ducimus nisi eos
+					rem nesciunt laborum excepturi sequi corrupti sed.
+				</p>
 				<h3>Vision</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit deserunt perspiciatis alias, eos nemo maiores molestias voluptate sint placeat autem natus quidem dolores architecto tempore animi nisi error corrupti sed.</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet iste ratione laboriosam eaque nihil saepe corporis mollitia voluptas, exercitationem, neque asperiores, harum odio? Accusamus, illo voluptas! A omnis iure explicabo suscipit hic facere, quis recusandae, repudiandae facilis neque eos at?</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+					deserunt perspiciatis alias, eos nemo maiores molestias
+					voluptate sint placeat autem natus quidem dolores architecto
+					tempore animi nisi error corrupti sed.
+				</p>
+
+				<div class="accordion" id="accordionBootstrap">
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingOne">
+							<button
+								class="accordion-button"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseOne"
+								aria-expanded="true"
+								aria-controls="collapseOne"
+							>
+								Oportunidades para Pymes
+							</button>
+						</h2>
+						<div
+							id="collapseOne"
+							class="accordion-collapse collapse show"
+							aria-labelledby="headingOne"
+							data-bs-parent="#accordionBootstrap"
+						>
+							<div class="accordion-body">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ipsam animi molestiae. Veritatis, nemo eveniet! Accusantium quis ex recusandae iste ratione, in velit, deserunt quidem nam hic eaque. Nostrum magni dicta aut exercitationem non tempora.</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingTwo">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseTwo"
+								aria-expanded="false"
+								aria-controls="collapseTwo"
+							>
+								Enfocado en el Usuario
+							</button>
+						</h2>
+						<div
+							id="collapseTwo"
+							class="accordion-collapse collapse"
+							aria-labelledby="headingTwo"
+							data-bs-parent="#accordionBootstrap"
+						>
+							<div class="accordion-body">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus accusantium ducimus cum. Voluptate doloremque officiis voluptatum delectus saepe laudantium rerum obcaecati quaerat possimus quisquam, quam accusantium vitae a neque necessitatibus quidem nulla unde. Hic, eius quibusdam!</p>
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingThree">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseThree"
+								aria-expanded="false"
+								aria-controls="collapseThree"
+							>
+								Seguridad en transacciones
+							</button>
+						</h2>
+						<div
+							id="collapseThree"
+							class="accordion-collapse collapse"
+							aria-labelledby="headingThree"
+							data-bs-parent="#accordionBootstrap"
+						>
+							<div class="accordion-body">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus maiores doloremque laudantium optio? Itaque veniam ipsa quam quia tempore libero soluta tempora reiciendis, omnis quidem iusto, deleniti magnam eos at.
+								Possimus, beatae obcaecati repudiandae magni reiciendis, fuga excepturi laboriosam optio placeat saepe voluptatem inventore commodi exercitationem aliquid libero cumque alias ducimus magnam, quos velit? Soluta officiis nihil totam ducimus dignissimos?</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Dolorum aut perspiciatis doloremque modi amet! Quam porro
+					sunt inventore, distinctio amet id fuga, aliquam ullam
+					necessitatibus nesciunt, corrupti quos quisquam maxime?
+					Voluptate perspiciatis nemo porro obcaecati quis et nesciunt
+					modi non, provident, ad ducimus minima harum natus quia
+					voluptates quod inventore quo eos nisi nihil eaque iure
+					ipsum. Minus, mollitia fuga.
+				</p>
 				<h3>Equipo</h3>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aperiam pariatur est distinctio nihil mollitia sequi nobis adipisci odit impedit esse labore eligendi quisquam qui minus, magni laudantium. Et, eveniet.
-				Adipisci consequatur, ducimus omnis amet fugit eaque sit, atque voluptatum eius voluptas in, aut asperiores illum voluptate aperiam excepturi reprehenderit dolorum aspernatur non molestias? Est incidunt ipsa impedit tempore eligendi!
-				Id ducimus praesentium similique omnis voluptas blanditiis mollitia distinctio ex explicabo, consequatur nam temporibus magnam architecto dolore reprehenderit itaque vitae sint fuga maiores repudiandae, animi unde quas? Accusamus, fugiat voluptatibus!
-				Facere nostrum minus impedit natus, ipsum dolorum voluptates laborum? Quod, ipsa velit fugit iste non officiis vel quidem tempore accusamus cupiditate repellat, praesentium fugiat mollitia ipsam delectus consequatur ex dignissimos.</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Dolore aperiam pariatur est distinctio nihil mollitia sequi
+					nobis adipisci odit impedit esse labore eligendi quisquam
+					qui minus, magni laudantium. Et, eveniet. Adipisci
+					consequatur, ducimus omnis amet fugit eaque sit, atque
+					voluptatum eius voluptas in, aut asperiores illum voluptate
+					aperiam excepturi reprehenderit dolorum aspernatur non
+					molestias? Est incidunt ipsa impedit tempore eligendi! Id
+					ducimus praesentium similique omnis voluptas blanditiis
+					mollitia distinctio ex explicabo, consequatur nam temporibus
+					magnam architecto dolore reprehenderit itaque vitae sint
+					fuga maiores repudiandae, animi unde quas? Accusamus, fugiat
+					voluptatibus! Facere nostrum minus impedit natus, ipsum
+					dolorum voluptates laborum? Quod, ipsa velit fugit iste non
+					officiis vel quidem tempore accusamus cupiditate repellat,
+					praesentium fugiat mollitia ipsam delectus consequatur ex
+					dignissimos.
+				</p>
 				<!-- Fotos del Equipo -->
 				<div class="image_galery">
-					<img src="https://images.pexels.com/photos/4974911/pexels-photo-4974911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="programador_1">
-					<img src="https://images.pexels.com/photos/5380613/pexels-photo-5380613.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="programador_2">
-					<img src="https://images.pexels.com/photos/3768911/pexels-photo-3768911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="programadora_1">
-					<img src="https://images.pexels.com/photos/3766227/pexels-photo-3766227.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="programadora_2">
+					<img
+						src="https://images.pexels.com/photos/4974911/pexels-photo-4974911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+						alt="programador_1"
+					/>
+					<img
+						src="https://images.pexels.com/photos/5380613/pexels-photo-5380613.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+						alt="programador_2"
+					/>
+					<img
+						src="https://images.pexels.com/photos/3768911/pexels-photo-3768911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+						alt="programadora_1"
+					/>
+					<img
+						src="https://images.pexels.com/photos/3766227/pexels-photo-3766227.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+						alt="programadora_2"
+					/>
 				</div>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, non.</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Eum, non.
+				</p>
 			</article>
 
 			<div class="main__line"></div>
@@ -62,12 +210,27 @@
 				<p>Copyright © 2021 Agustin Wet</p>
 			</div>
 			<div class="footer__map_wrapper">
-				<img class="footer__map_img" src="./../img/map_image.png" alt="Map">
+				<img
+					class="footer__map_img"
+					src="./../img/map_image.png"
+					alt="Map"
+				/>
 			</div>
 			<div>
 				<p>Av. Rivadavia 5093, Piso 5, CP 1344, Caballito, CABA</p>
 				<p>Horarios : 8:00hrs - 17:00hrs, Lun - Vie</p>
 			</div>
 		</footer>
+
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+			integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+			integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
