--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Contacto</title>
-		<link rel="stylesheet" href="./../css/styles.css" />
+		<link rel="stylesheet" href="./../css/sass.css"/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
 	<body>
 		<!-- Header -->
@@ -33,7 +34,7 @@
 			<!-- Formulario -->
 			<form action="" class="contact_form">
 				<!-- Campo de email -->
-				<div class="form_group--col">
+				<div class="form_group">
 					<label for="email" class="form_label">Email</label>
 					<input
 						type="email"
@@ -42,7 +43,7 @@
 					/>
 				</div>
 				<!-- Campo de tipo de usuario -->
-				<div class="form_group--col">
+				<div class="form_group">
 					<label for="user_type" class="form_label">Tipo de Usuario</label>
 					<select name="user_type" id="user_type">
 						<option value="vendedoroficial">
@@ -55,7 +56,7 @@
 					</select>
 				</div>
 				<!-- Campo de mensaje -->
-				<div class="form_group--col">
+				<div class="form_group">
 					<label for="message" class="form_label">Mensaje</label>
 					<textarea
 						name="message"
@@ -66,7 +67,7 @@
 					></textarea>
 				</div>
 				<!-- Checkboxes de categorias -->
-				<div class="form_group--col">
+				<div class="form_group">
 					<label class="form_label">¿Que desea comprar en nuestra tienda?</label>
 					<div class="form_grid">
 						<label for="informatica"
@@ -111,7 +112,7 @@
 					</div>
 				</div>
 				<!-- Botones -->
-				<div class="form_group">
+				<div class="form_row">
 					<input type="reset" value="Reset" class="button"/>
 					<input type="submit" value="Enviar" class="button"/>
 				</div>
@@ -135,5 +136,8 @@
 				<p>Horarios : 8:00hrs - 17:00hrs, Lun - Vie</p>
 			</div>
 		</footer>
+
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 	</body>
 </html>
