--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- SEO -->
+		<meta name="description" content="My coderhouse web development course project">
+		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+
 		<title>Ecommerce - Home</title>
 		<link rel="stylesheet" href="./css/sass.css"/>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +21,7 @@
 					<li class="header__link"><a href="./pages/ofertas.html">Ofertas</a></li>
 					<li class="header__logotipo">
 						<a href="./">
-							<span>CompraLoca</span>
+							<h1 class="header__title">CompraLoca</h1>
 							<img src="./img/loco.png" alt="loco_icon">
 						</a>
 					</li>
@@ -66,7 +70,7 @@
 			<!-- Link titilante hacia las Ofertas -->
 			<a href="./pages/ofertas.html" class="link_oferta"><h2>Tabla de OFERTAS!!!</h2></a>
 
-			<h1 class="pagetitle">Tienda</h1>
+			<h2 class="pagetitle">Tienda</h2>
 			<!-- Buscador/Filtro de productos -->
 			<div class="product_filter">
 				<form action="">
