--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Sobre Nosotros</title>
+		<!-- SEO -->
+		<meta name="description" content="My coderhouse web development course project">
+		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+
 		<link rel="stylesheet" href="./../css/sass.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,7 +30,7 @@
 					</li>
 					<li class="header__logotipo">
 						<a href="./../index.html">
-							<span>CompraLoca</span>
+							<h1 class="header__title">CompraLoca</h1>
 							<img src="./../img/loco.png" alt="loco_icon" />
 						</a>
 					</li>
