--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Ofertas</title>
+		<!-- SEO -->
+		<meta name="description" content="My coderhouse web development course project">
+		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+
 		<link rel="stylesheet" href="./../css/sass.css"/>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
@@ -17,7 +21,7 @@
 					<li class="header__link"><a href="./ofertas.html">Ofertas</a></li>
 					<li class="header__logotipo">
 						<a href="./../index.html">
-							<span>CompraLoca</span>
+							<h1 class="header__title">CompraLoca</h1>
 							<img src="./../img/loco.png" alt="loco_icon">
 						</a>
 					</li>
