--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- SEO -->
-		<meta name="description" content="My coderhouse web development course project">
-		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+		<meta name="description" content="CompraLoca es un sitio de compras online que te ayuda a elegir mejor y a encontrar el mejor precio en miles de productos.">
+		<meta name="keywords" content="CompraLoca Tienda,Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
 
 		<title>Ecommerce - Home</title>
 		<link rel="stylesheet" href="./css/sass.css"/>
@@ -70,7 +70,7 @@
 			<!-- Link titilante hacia las Ofertas -->
 			<a href="./pages/ofertas.html" class="link_oferta"><h2>Tabla de OFERTAS!!!</h2></a>
 
-			<h2 class="pagetitle">Tienda</h2>
+			<h1 class="pagetitle">Tienda</h1>
 			<!-- Buscador/Filtro de productos -->
 			<div class="product_filter">
 				<form action="">
