--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Sobre Nosotros</title>
 		<!-- SEO -->
-		<meta name="description" content="My coderhouse web development course project">
-		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+		<meta name="description" content="Informacion sobre el equipo que administra el sitio CompraLoca y los ayuda a mejorar su experienia como usuarios.">
+		<meta name="keywords" content="CompraLoca Nosotros, Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
 
 		<link rel="stylesheet" href="./../css/sass.css" />
 		<link
