--- a/pages/tendencias.html
+++ b/pages/tendencias.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ecommerce - Tienda</title>
 		<!-- SEO -->
-		<meta name="description" content="My coderhouse web development course project">
-		<meta name="keywords" content="Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
+		<meta name="description" content="Queres ver que productos estan de moda y adquirirlos a buenos precios? entra y aprobecha!!!">
+		<meta name="keywords" content="Tendencias CompraLoca, Coderhouse, Wet, Agustin, Wet Agustin, Agustin Wet, Website, Web, Coderhouse Agustin Wet web project, Compra, CompraLoca, COMPRALOCA, COMPRA, LOCA, COMPRAR ARGENTINA, COMPRAR">
 
 		<link rel="stylesheet" href="./../css/sass.css"/>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
