--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<div class="product_item">
 					<div class="product_item__img_wrapper">
 						<span class="product_price">$45000</span>
-						<img src="https://images.pexels.com/photos/264636/pexels-photo-264636.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="product-image">
+						<img src="https://images.pexels.com/photos/824197/pexels-photo-824197.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="product-image">
 					</div>
 					<div class="product_item__info_wrapper">
 						<span class="product_item__info_name">
